src/test/ui/specialization/issue-38091.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-38091.rs:1:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0277]: the trait bound `(): Valid` is not satisfied
  --> $DIR/issue-38091.rs:12:5
   |
LL |     type Ty: Valid;
   |              ----- required by this bound in `Iterate::Ty`
...
LL |     default type Ty = ();
   |     ^^^^^^^^^^^^^^^^^^^^^ the trait `Valid` is not implemented for `()`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
